# libmime

./: Cargo.toml  README.md  mime-inator-summary.json
.github/workflows/: ci.yml  update.yml
libmime/: Cargo.toml
libmime/src/: generated.rs  generated_map.rs  generated_phf.rs  lib.rs  lookup.rs  mime.rs  tests.rs
libmime/src/mime/: mod.rs  toplevel.rs
mime-inator/: Cargo.toml
mime-inator/src/: generated.rs  generator.rs  iana.rs  main.rs  summary.rs  version.rs
