[package]
name = "mime-inator"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
anyhow = "1"
csv = "1.4"
log = "0.4.29"
phf_codegen = "0.13"
pretty_env_logger = "0.5.0"
reqwest = "0.13"
scraper = "0.26.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51", features = ["macros", "rt-multi-thread"] }
toml_edit = "0.25.10"
xml = "1.2.1"
